components/privacypolicycontent.module.scss
@import "./global.scss";

.mainContainer {
  margin: 4% 5%;
  @include fontSize(text);
  text-align: justify;
  line-height: 25px;
  font-family: "OpenSans";
  .title {
    color: $main-color;
    @include fontSize(title);
    text-align: center;
    margin-bottom: 40px;
  }
  .text,
  h5,
  h6,
  li {
    color: $black;
  }

  .text,
  h5,
  h6 {
    margin: 15px 0;
  }
  h5,
  h6 {
    @include fontSize(subtitle);
  }
  ol {
    margin-left: 35px;
    li {
      margin: 5px 0;
    }
  }
  a {
    color: $main-color;
    &:hover {
      text-decoration: underline;
    }
  }
}

